# words-definitions

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/api/: main.py
app/api/v1/endpoints/: api.py  routes.py  words.py
app/api/v1/endpoints/schemas/: words.py
app/src/core/: database.py
app/src/words/application/services/: words.py
app/src/words/domain/: translate_repository.py  words_repository.py
app/src/words/domain/models/: word.py
app/src/words/infrastructure/: google_translate_service.py  words_repository.py
app/src/words/infrastructure/entities/: word.py
tests/: pytest.ini
